# mas-wiki

./: .gitignore  LICENSE  README.md  pyproject.toml
maswiki/: mwb.py
