[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "maswiki"
version = "0.0.2"
description = "Build a static website from a Massive Wiki"
authors = ["Bill Anderson <band@acm.org>"]
readme = "README.md"
homepage = "https://github.com/Massive-Wiki/mas-wiki"
packages = [
    { include = "maswiki" },
    { include = "maswiki/mistletoe_renderer" },
]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
mistletoe = "1.1.0"
python-dateutil = "2.8.2"
pyyaml = "6.0.1"
six = "1.16.0"

[tool.poetry.scripts]
maswiki = "maswiki.mwb:main"
